# libcixl

./: .gitignore  CMakeLists.txt  readme.adoc
demos/: CMakeLists.txt  demovt.c  demovt16.mk  demovt16.mk1
src/: CMakeLists.txt  libcixl.c  libcixl.h
src/editor/: elm.json
src/editor/src/: Cixl.elm  Events.elm  Exports.elm  Main.elm  PixelFonts.elm
src/editor/src/Graphics/: Angle.elm  Basics.elm  Matrix2.elm  Projections.elm  Shapes.elm  Vector2.elm
src/editor/src/Graphics/Shapes/: Rectangle.elm
src/editor/tests/: CixlEncodingTests.elm
src/editor/tests/Graphics/: CameraTests.elm  Vector2Tests.elm
src/libcixl/: colors.c  colors.h  config.h  console.c  console.h  cxl.c  cxl.h  game.c  game.h  libcixl.h  screen_buffer.c  screen_buffer.h  style_opts.c  style_opts.h
src/libcixl/cixl-hardware/: display-chip.c  display-chip.h
src/libcixl/cixl-os/: 00-cixl-native-intf.h  01-cixl-kernel.h  02-cixl-vm.h  03-cixl-compiler.h  04-cixl-os-repl.h  machine.c  machine.h
src/libcixl/std/: cixl_math.h  cixl_sleep.h  cixl_stdbool.h  cixl_stdint.h  cixl_stdlib.h  cixl_stdtime.h
test/: CMakeLists.txt  catch.hpp  libcixl-tests.cpp
